# stp_etc_imaging

./: .gitignore  .pre-commit-config.yaml  COPYRIGHT  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 02-bug.yml
.github/workflows/: ci.yaml
docs/: ETC_Changelog.rst  README.md
notebooks/: ETC_Demo.ipynb  Example_ETC_SNR_Calculation_SN1a.ipynb  README.md  example.ipynb  example_tool.py
src/config_project_template/: __init__.py  config_loader.py
src/config_project_template/configs/: common_params.toml
src/config_project_template/support_data/: README.md
src/config_project_template/support_data/archive/: README.md
src/config_project_template/support_data/coatings/: special_coating.csv
src/etc_wcc/: ExposureTimeSNRCalculator.py  __init__.py
src/stp_etc_imaging/: ExposureTimeSNRCalculator.py  __init__.py  _version.py
tests/: test_ETC_initialization.py  test_config_files.py  test_version_consistency.py
tests/test_data/: pickles_uk_9.fits
tests/test_data/test_STP/: telescope.toml
tests/test_data/test_UM/: astrophysics.toml  observatory.toml  telescope.toml
