[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta" 

[project]
name = "etc_wcc"
authors = [
  {name = "Aaron Goldtooth", email = "gold1992@arizona.edu"},
  {name = "Justin Hom", email = "jrhom@arizona.edu"},
  {name = "Jess Johnson", email = "jajohnson@arizona.edu"}
]
maintainers = [
  {name = "Sanchit Sabhlok", email = "ssabhlok@arizona.edu"}
]
description = "Exposure Time Calculator for the Wavefront Context Camera on STP."
readme = "README.md"
license = { text = "GNU GENERAL PUBLIC LICENSE - Version 3" }
requires-python = ">=3.8"
dependencies = []

dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/uasal/ETC_WCC/blob/develop/README.md"
Changelog = "https://github.com/uasal/ETC_WCC/blob/develop/CHANGELOG.md"
Repository = "https://github.com/uasal/ETC_WCC"

[tool.setuptools]
packages = ["etc_wcc"]
package-dir = { "" = "src" }
include-package-data = true


[tool.setuptools_scm]
write_to = "src/etc_wcc/_version.py"
version_scheme = "post-release"
local_scheme = "node-and-date"

[tool.pytest.ini_options]
testpaths = [
	"tests",
]

[tool.coverage.run]
omit=["src/etc_wcc/_version.py"]

[tool.setuptools.package-data]
"etc_wcc" = ["support_data/**/*", "configs/**/*.toml"]
