[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta" 

[project]
name = "stp_etc_imaging"
authors = [
  {name = "Aaron Goldtooth", email = "gold1992@arizona.edu"},
  {name = "Justin Hom", email = "jrhom@arizona.edu"},
  {name = "Jess Johnson", email = "jajohnson@arizona.edu"},
  {name = "Sanchit Sabhlok", email = "ssabhlok@arizona.edu"}
]
maintainers = [
  {name = "Sanchit Sabhlok", email = "ssabhlok@arizona.edu"}
]
description = "Exposure Time Calculator for the Wavefront Context Camera on STP."
readme = "README.md"
license = { text = "GNU GENERAL PUBLIC LICENSE - Version 3" }
requires-python = ">=3.12"
dependencies = ["numpy", "astropy", "matplotlib", "scipy", "synphot", "math", "pandas", "utils_config"]
optional-dependencies = ["config_stp", "config_um", "config_stp_wcc", "config_um_wcc", "pytest"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/uasal/stp_etc_imaging/blob/main/README.md"
Changelog = "https://github.com/uasal/stp_etc_imaging/blob/main/CHANGELOG.md"
Repository = "https://github.com/uasal/stp_etc_imaging"

[tool.setuptools]
packages = ["stp_etc_imaging"]
package-dir = { "" = "src" }
include-package-data = true


[tool.setuptools_scm]
write_to = "src/stp_etc_imaging/_version.py"
version_scheme = "post-release"
local_scheme = "node-and-date"

[tool.pytest.ini_options]
testpaths = [
	"tests",
]

[tool.coverage.run]
omit=["src/stp_etc_imaging/_version.py"]

[tool.setuptools.package-data]
"stp_etc_imaging" = ["support_data/**/*", "configs/**/*.toml"]
