[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta" 

[project]
name = "stp_etc_imaging"
authors = [
  {name = "Aaron Goldtooth", email = "gold1992@arizona.edu"},
  {name = "Justin Hom", email = "jrhom@arizona.edu"},
  {name = "Jess Johnson", email = "jajohnson@arizona.edu"},
  {name = "Sanchit Sabhlok", email = "ssabhlok@arizona.edu"}
]
maintainers = [
  {name = "Sanchit Sabhlok", email = "ssabhlok@arizona.edu"}
]
description = "Exposure Time Calculator for the Wavefront Context Camera on STP."
readme = "README.md"
license = { text = "GNU GENERAL PUBLIC LICENSE - Version 3" }
requires-python = ">=3.12"
dependencies = [
    "utils_config @ git+https://github.com/uasal/utils_config.git@develop",
    "synphot",
    "numpy",
    "astropy",
    "matplotlib",
    "pandas",
]
dynamic = ["version"]

[project.optional-dependencies]
dev= ["config_stp @ git+https://github.com/uasal/config_stp.git", "config_um @ git+https://github.com/uasal/config_um.git", "config_stp_wcc @ git+https://github.com/uasal/config_stp_wcc.git", "config_um_wcc @ git+https://github.com/uasal/config_um_wcc.git", "pytest"]  

[project.urls]
Homepage = "https://github.com/uasal/stp_etc_imaging/blob/main/README.md"
Changelog = "https://github.com/uasal/stp_etc_imaging/blob/main/CHANGELOG.md"
Repository = "https://github.com/uasal/stp_etc_imaging"

[tool.setuptools]
packages = ["stp_etc_imaging"]
package-dir = { "" = "src" }
include-package-data = true


[tool.setuptools_scm]
write_to = "src/stp_etc_imaging/_version.py"
version_scheme = "post-release"
local_scheme = "node-and-date"

[tool.pytest.ini_options]
testpaths = [
	"tests",
]

[tool.coverage.run]
omit=["src/stp_etc_imaging/_version.py"]

[tool.setuptools.package-data]
"stp_etc_imaging" = ["support_data/**/*", "configs/**/*.toml"]
